@@ -168,3 +168,7 @@ Thu Apr 11 18:15:11 2002                        Michael Jennings (mej)
 
 Fix "make distcheck"
 ----------------------------------------------------------------------
+Thu Apr 11 23:47:26 2002                        Michael Jennings (mej)
+
+Not needed...
+----------------------------------------------------------------------
